修改设备管理，可修改设备，智能问答用户问不需要加载动画